{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 130,
  "lineage": "2488e5e8-86c2-f669-17a7-67dd3a42c8ad",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:135334155027:loadbalancer/app/prueba-dev-lbApplication/a28b4324a94570f8",
            "arn_suffix": "app/prueba-dev-lbApplication/a28b4324a94570f8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prueba-dev-lbApplication-413398102.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:135334155027:loadbalancer/app/prueba-dev-lbApplication/a28b4324a94570f8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prueba-dev-lbApplication",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02afb1d1ca1fae1b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-070647c56e663603c"
              },
              {
                "subnet_id": "subnet-0b3577fe8346cc20a"
              }
            ],
            "subnets": [
              "subnet-070647c56e663603c",
              "subnet-0b3577fe8346cc20a"
            ],
            "vpc_id": "vpc-0e30a125b7070b4e1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_lb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:135334155027:listener/app/prueba-dev-lbApplication/a28b4324a94570f8/77ca9fbca29876ca",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:135334155027:targetgroup/prueba-dev-appLBtg/155b44f4aded501d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:135334155027:listener/app/prueba-dev-lbApplication/a28b4324a94570f8/77ca9fbca29876ca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:135334155027:loadbalancer/app/prueba-dev-lbApplication/a28b4324a94570f8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_lb.load_balancing",
            "module.compute.aws_lb_target_group.app_tg",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:135334155027:targetgroup/prueba-dev-appLBtg/155b44f4aded501d",
            "arn_suffix": "targetgroup/prueba-dev-appLBtg/155b44f4aded501d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:135334155027:targetgroup/prueba-dev-appLBtg/155b44f4aded501d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:135334155027:loadbalancer/app/prueba-dev-lbApplication/a28b4324a94570f8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prueba-dev-appLBtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:network-acl/acl-0da6508fa5aacbc2e",
            "default_network_acl_id": "acl-0da6508fa5aacbc2e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0da6508fa5aacbc2e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "135334155027",
            "subnet_ids": [
              "subnet-02b928cccdfa384f9",
              "subnet-070647c56e663603c",
              "subnet-0ac15bebac7d239f5",
              "subnet-0b3577fe8346cc20a"
            ],
            "tags": {
              "Name": "prueba-dev-vpc-default"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-default"
            },
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:route-table/rtb-0e06f71381a909204",
            "default_route_table_id": "rtb-0e06f71381a909204",
            "id": "rtb-0e06f71381a909204",
            "owner_id": "135334155027",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prueba-dev-vpc-default"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:security-group/sg-027ced57ed7a736e0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-027ced57ed7a736e0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "135334155027",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prueba-dev-vpc-default"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-default"
            },
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6aaee67c771931c",
            "arn": "arn:aws:ec2:us-west-2:135334155027:elastic-ip/eipalloc-0d6aaee67c771931c",
            "association_id": "eipassoc-01f98715919b5c07d",
            "domain": "vpc",
            "id": "eipalloc-0d6aaee67c771931c",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0804974114d50ac12",
            "private_dns": "ip-10-0-3-117.us-west-2.compute.internal",
            "private_ip": "10.0.3.117",
            "public_dns": "ec2-44-254-24-117.us-west-2.compute.amazonaws.com",
            "public_ip": "44.254.24.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prueba-dev-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-us-west-2a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7bbab7ed313e752",
            "arn": "arn:aws:ec2:us-west-2:135334155027:elastic-ip/eipalloc-0c7bbab7ed313e752",
            "association_id": "eipassoc-02ab20bc8d94f05f5",
            "domain": "vpc",
            "id": "eipalloc-0c7bbab7ed313e752",
            "network_border_group": "us-west-2",
            "network_interface": "eni-028ed81908146a30e",
            "private_dns": "ip-10-0-4-38.us-west-2.compute.internal",
            "private_ip": "10.0.4.38",
            "public_dns": "ec2-44-253-71-87.us-west-2.compute.amazonaws.com",
            "public_ip": "44.253.71.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prueba-dev-vpc-us-west-2b"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-us-west-2b"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:internet-gateway/igw-02b9d8cf6b82b74b2",
            "id": "igw-02b9d8cf6b82b74b2",
            "owner_id": "135334155027",
            "tags": {
              "Name": "prueba-dev-vpc"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc"
            },
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6aaee67c771931c",
            "association_id": "eipassoc-01f98715919b5c07d",
            "connectivity_type": "public",
            "id": "nat-005bc9307ff1e8272",
            "network_interface_id": "eni-0804974114d50ac12",
            "private_ip": "10.0.3.117",
            "public_ip": "44.254.24.117",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-070647c56e663603c",
            "tags": {
              "Name": "prueba-dev-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-us-west-2a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7bbab7ed313e752",
            "association_id": "eipassoc-02ab20bc8d94f05f5",
            "connectivity_type": "public",
            "id": "nat-0324592fa32b64651",
            "network_interface_id": "eni-028ed81908146a30e",
            "private_ip": "10.0.4.38",
            "public_ip": "44.253.71.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b3577fe8346cc20a",
            "tags": {
              "Name": "prueba-dev-vpc-us-west-2b"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-us-west-2b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-074cf5ab78fa0bb0f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-005bc9307ff1e8272",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-074cf5ab78fa0bb0f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0500886442c575b7d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0324592fa32b64651",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0500886442c575b7d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02b9d8cf6b82b74b2",
            "id": "r-rtb-0ecc581f862a434d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ecc581f862a434d3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:route-table/rtb-074cf5ab78fa0bb0f",
            "id": "rtb-074cf5ab78fa0bb0f",
            "owner_id": "135334155027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-005bc9307ff1e8272",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prueba-dev-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:route-table/rtb-0500886442c575b7d",
            "id": "rtb-0500886442c575b7d",
            "owner_id": "135334155027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0324592fa32b64651",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prueba-dev-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-private-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:route-table/rtb-0ecc581f862a434d3",
            "id": "rtb-0ecc581f862a434d3",
            "owner_id": "135334155027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b9d8cf6b82b74b2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prueba-dev-vpc-public"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096c3d77263d45af5",
            "route_table_id": "rtb-074cf5ab78fa0bb0f",
            "subnet_id": "subnet-02b928cccdfa384f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7ae9e498c4f72bf",
            "route_table_id": "rtb-0500886442c575b7d",
            "subnet_id": "subnet-0ac15bebac7d239f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dac8b99748e1cc99",
            "route_table_id": "rtb-0ecc581f862a434d3",
            "subnet_id": "subnet-070647c56e663603c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f4fbfd4b9d8263a",
            "route_table_id": "rtb-0ecc581f862a434d3",
            "subnet_id": "subnet-0b3577fe8346cc20a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:subnet/subnet-02b928cccdfa384f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b928cccdfa384f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135334155027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prueba-dev-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-private-us-west-2a"
            },
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:subnet/subnet-0ac15bebac7d239f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac15bebac7d239f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135334155027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prueba-dev-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-private-us-west-2b"
            },
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:subnet/subnet-070647c56e663603c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070647c56e663603c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135334155027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prueba-dev-vpc-public-us-west-2a"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-public-us-west-2a"
            },
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:subnet/subnet-0b3577fe8346cc20a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3577fe8346cc20a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135334155027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prueba-dev-vpc-public-us-west-2b"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc-public-us-west-2b"
            },
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_availability_zones.available",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:vpc/vpc-0e30a125b7070b4e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da6508fa5aacbc2e",
            "default_route_table_id": "rtb-0e06f71381a909204",
            "default_security_group_id": "sg-027ced57ed7a736e0",
            "dhcp_options_id": "dopt-097a3c7a529688467",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e30a125b7070b4e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e06f71381a909204",
            "owner_id": "135334155027",
            "tags": {
              "Name": "prueba-dev-vpc"
            },
            "tags_all": {
              "Name": "prueba-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:security-group/sg-04f6d4501563eb585",
            "description": "permitir  comunicacion con web_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f6d4501563eb585",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02afb1d1ca1fae1b4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prueba-dev-app-sg",
            "name_prefix": "",
            "owner_id": "135334155027",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedDate": "2025-09-01",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "prueba",
              "Type": "Security Group"
            },
            "tags_all": {
              "CreatedDate": "2025-09-01",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "prueba",
              "Type": "Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:security-group/sg-0e95c8d1f0cca7999",
            "description": "permitir  comunicacion con APP_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e95c8d1f0cca7999",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04f6d4501563eb585"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "prueba-dev-db-sg",
            "name_prefix": "",
            "owner_id": "135334155027",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedDate": "2025-09-01",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "prueba",
              "Type": "Security Group"
            },
            "tags_all": {
              "CreatedDate": "2025-09-01",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "prueba",
              "Type": "Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:security-group/sg-02afb1d1ca1fae1b4",
            "description": "permitir el trafico http/https",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02afb1d1ca1fae1b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prueba-dev-web-sg",
            "name_prefix": "",
            "owner_id": "135334155027",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedDate": "2025-09-01",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "prueba",
              "Type": "Security Group"
            },
            "tags_all": {
              "CreatedDate": "2025-09-01",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "prueba",
              "Type": "Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30a125b7070b4e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_ingreso_from_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2870181397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04f6d4501563eb585",
            "security_group_rule_id": "sgr-081066a6dfc4c1032",
            "self": false,
            "source_security_group_id": "sg-02afb1d1ca1fae1b4",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.security.aws_security_group.app_sg",
            "module.security.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_ingreso_from_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3693537970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e95c8d1f0cca7999",
            "security_group_rule_id": "sgr-04dd3e4d5c5086759",
            "self": false,
            "source_security_group_id": "sg-04f6d4501563eb585",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.security.aws_security_group.app_sg",
            "module.security.aws_security_group.db_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "permitir_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:security-group-rule/sgr-0b8badc8bc11feff2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b8badc8bc11feff2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04f6d4501563eb585",
            "security_group_rule_id": "sgr-0b8badc8bc11feff2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.security.aws_security_group.app_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "permitir_all_out_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:security-group-rule/sgr-0dc94247145190687",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0dc94247145190687",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e95c8d1f0cca7999",
            "security_group_rule_id": "sgr-0dc94247145190687",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.security.aws_security_group.db_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "permitir_http_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:security-group-rule/sgr-03493dad342fff977",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03493dad342fff977",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02afb1d1ca1fae1b4",
            "security_group_rule_id": "sgr-03493dad342fff977",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.security.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "permitir_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135334155027:security-group-rule/sgr-089bd0f9af4da3495",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-089bd0f9af4da3495",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02afb1d1ca1fae1b4",
            "security_group_rule_id": "sgr-089bd0f9af4da3495",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.security.aws_security_group.web_sg"
          ]
        }
      ]
    }
  ]
}